Make sure that post content images don't overflow either

--- a/content/themes/feminismindia/assets/css/custom.css
+++ b/content/themes/feminismindia/assets/css/custom.css
@@ -43,6 +43,10 @@ aside.read-next {
     max-width: 800px;
 }
 
+.container.content > p > img {
+    max-width: 100%;
+}
+
 .header {
     margin-top: 6rem;
     text-align: center;
